<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#C1C8C8">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardElevation="8dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">
            <TextView
                android:id="@+id/cardview_Tanksize"
                style="@style/FuelCalResultScreen"
                android:text="@string/tank_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/fuel_TankSize_result"
                style="@style/FuelCalResultScreen"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardview_Tanksize"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/average_PerKm"
                style="@style/FuelCalResultScreen"
                android:text="@string/Average"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview_Tanksize" />
            <TextView
                android:id="@+id/average_PerKm_Result"
                style="@style/FuelCalResultScreen"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/average_PerKm"
                app:layout_constraintTop_toBottomOf="@+id/fuel_TankSize_result"/>
            <TextView
                android:id="@+id/totalTravelInTank"
                style="@style/FuelCalResultScreen"
                android:text="@string/total_travel_in_tank"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/average_PerKm"/>
            <TextView
                android:id="@+id/totalTravelInTank_Result"
                style="@style/FuelCalResultScreen"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/totalTravelInTank"
                app:layout_constraintTop_toBottomOf="@id/average_PerKm_Result"/>
            <TextView
                android:id="@+id/usedFuel"
                style="@style/FuelCalResultScreen"
                android:text="@string/fuel_used"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalTravelInTank"/>
            <TextView
                android:id="@+id/usedFuelResult"
                style="@style/FuelCalResultScreen"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/usedFuel"
                app:layout_constraintTop_toBottomOf="@+id/totalTravelInTank_Result"/>
            <TextView
                android:id="@+id/finalReading"
                style="@style/FuelCalResultScreen"
                android:text="@string/final_reading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usedFuel"/>
            <TextView
                android:id="@+id/finalReading_Result"
                style="@style/FuelCalResultScreen"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/finalReading"
                app:layout_constraintTop_toBottomOf="@+id/usedFuelResult"/>
            <TextView
                android:id="@+id/finalPriceAtEnd"
                style="@style/FuelCalResultScreen"
                android:text="@string/fuel_price_at_refill"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/finalReading"/>
            <TextView
                android:id="@+id/finalPriceAtEnd_Result"
                style="@style/FuelCalResultScreen"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/finalPriceAtEnd"
                app:layout_constraintTop_toBottomOf="@+id/finalReading_Result"/>
            <TextView
                android:id="@+id/fuelDifference"
                style="@style/FuelCalResultScreen"
                android:text="@string/fuel_difference"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/finalPriceAtEnd"/>
            <TextView
                android:id="@+id/fuelDifference_Result"
                style="@style/FuelCalResultScreen"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fuelDifference"
                app:layout_constraintTop_toBottomOf="@+id/finalPriceAtEnd_Result"/>
            <TextView
                android:id="@+id/calculateFuelEfficiency"
                style="@style/FuelCalResultScreen"
                android:text="@string/performance_of_car"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fuelDifference"/>
            <TextView
                android:id="@+id/calculateFuelEfficiency_Result"
                style="@style/FuelCalResultScreen"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/calculateFuelEfficiency"
                app:layout_constraintTop_toBottomOf="@+id/fuelDifference_Result"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
